--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/preset-env": "7.13.8"
   },
   "dependencies": {
-    "rxjs": "^6.6.6"
+    "@types/three": "^0.126.0",
+    "rxjs": "^6.6.6",
+    "three": "^0.126.1"
   }
 }
