--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/three": "^0.126.0",
     "rxjs": "^6.6.6",
-    "three": "^0.126.1"
+    "three": "^0.126.1",
+    "three-orbitcontrols-ts": "^0.1.2"
   }
 }
