--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-    "trailingComma": "all",
+    "trailingComma": "none",
     "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true,
+    "semi": true,
+    "singleQuote": true
 }
