--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "breakout",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "typescript": "^4.2.3"
-  },
-  "resolutions": {
-    "@babel/preset-env": "7.13.8"
-  },
-  "dependencies": {
-    "@types/three": "^0.126.0",
-    "rxjs": "^6.6.6",
-    "three": "^0.126.1",
-    "three-orbitcontrols-ts": "^0.1.2"
-  }
+    "name": "breakout",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "parcel ./src/index.html",
+        "prebuild-dev": "shx rm -rf dist/*",
+        "build-dev": "parcel build ./src/index.html --no-minify --public-url ./",
+        "prebuild": "shx rm -rf dist/*",
+        "build": "parcel build ./src/index.html --public-url ./",
+        "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "cssnano": "^4.1.10",
+        "push-dir": "^0.4.1",
+        "typescript": "^4.2.3"
+    },
+    "resolutions": {
+        "@babel/preset-env": "7.13.8"
+    },
+    "dependencies": {
+        "@types/three": "^0.126.0",
+        "rxjs": "^6.6.6",
+        "three": "^0.126.1",
+        "three-orbitcontrols-ts": "^0.1.2"
+    }
 }
