--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "cssnano": "^4.1.10",
         "push-dir": "^0.4.1",
+        "shx": "^0.3.3",
         "typescript": "^4.2.3"
     },
     "resolutions": {
