--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/dat.gui": "^0.7.6",
         "cssnano": "^4.1.10",
         "push-dir": "^0.4.1",
         "shx": "^0.3.3",
@@ -24,7 +25,9 @@
         "@babel/preset-env": "7.13.8"
     },
     "dependencies": {
+        "@types/dat-gui": "^0.6.3",
         "@types/three": "^0.126.0",
+        "dat.gui": "^0.7.7",
         "rxjs": "^6.6.6",
         "three": "^0.126.1",
         "three-orbitcontrols-ts": "^0.1.2"
